--- a/sketchsage.html
+++ b/sketchsage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset=utf-8>
-    <title>My first three.js app</title>
+    <title>Sketch Sage</title>
     <style>
         body {
             margin: 0;
@@ -15,8 +15,10 @@
     </style>
 </head>
 <body>
-    Hello, World
     <script src="js/three.js"></script>
-    <script>// Our Javascript will go here.</script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/GLTFLoader.js"></script> 
+    <script src="js/TransformControls.js"></script> 
+    <script src="js/mainElements.js"></script> 
 </body>
 </html>
