--- a/sketchsage.html
+++ b/sketchsage.html
@@ -5,20 +5,58 @@
     <title>Sketch Sage</title>
     <style>
         body {
-            margin: 0;
+            margin: 0px;
         }
 
         canvas {
             width: 100%;
-            height: 100%
+            height: 100%;
+            position: static;
         }
+
+        div {
+            break-inside: avoid;
+            /*padding: 20px;*/
+        }
+        .sidebar {
+            width: 300px;
+            position: fixed;
+            height: 100%;
+
+            top: 28; /*height of the header*/
+            right: 0;
+            background-color: rgb(255, 255, 255);
+
+            padding-top: 16px;
+        }
+
     </style>
 </head>
 <body>
+    <header style="margin:20px">
+        <div class="top-shelf">
+            <h2>
+                <img src="tempImages/download.svg" alt="SketchSage" width="20" height="18">
+                SKETCH SAGE
+                <bdi style="float:right">
+                    <div>
+                        <button>ABOUT</button>
+                        <button>HOW TO</button>
+                    </div>
+                </bdi>
+            </h2>
+        </div>
+    </header>
+    <div class="sidebar">
+        wasuuup
+    </div>
+    
     <script src="js/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/GLTFLoader.js"></script> 
+    <script src="js/FBXLoader.js"></script> 
     <script src="js/TransformControls.js"></script> 
     <script src="js/mainElements.js"></script> 
+    <script src="js/inflate.min.js"></script> 
 </body>
 </html>
