--- a/sketchsage.html
+++ b/sketchsage.html
@@ -2,9 +2,16 @@
 <html>
 <head>
     <meta charset=utf-8>
-    <title>Sketch Sage</title>
     <link rel="stylesheet" href="styling/styleFile.css">
     <link rel="icon" href="styling/images/favicon.ico">
+    <title>Sketch Sage | Free Character Posing Studio</title>
+    <meta name="description" content="Free interactive modeling studio for artists, 
+    fashion designers, and illustrators. Create realistic poses and lighting setups
+    for figure drawing and much, much more!">
+    <meta name="keywords" content="model, draw, figure drawing, drawing, illustration,
+    design, fashion design, figure sketching, mannequin, 3D model, 3D, interactive,
+    sketch, sketching, pose, posing, interactive, modeling, interactive model, male,
+    female, art, life drawing, virtual, sage, hand model">
 </head>
 <body>
     <div id="container">
@@ -15,7 +22,6 @@
                     SKETCH SAGE
                     <div class="right-links">
                         <button style="font-family:'shrikhand';font-size:20px;" onclick="toggleAbout()">ABOUT</button>
-                        <button style="font-family:'shrikhand';font-size:20px;" onclick="toggleHowTo()">HOW TO</button>
                         <button style="font-family:'shrikhand';font-size:20px;" onclick="toggleController()">CONTROLS</button>
                     </div>
                 </h2>
@@ -23,20 +29,37 @@
         </div>
         <div class="sidebar" id="sidebar">
             <div class="about" id="about">
-                <p>
-                    SKETCH SAGE is a virtual modeling studio to help
-                    artists do what they do best: draw. 
-                    
-                    Created by an artist and programmer, Sketch Sage
-                    was made to help creators play with form and light
-                    all from their computer. 
-                    
+                <h2 style="text-align:center">Illustrate Easily</h2>
+                <p style="text-align:center">
+                    SKETCH SAGE is a virtual modeling studio that helps
+                    creators interact with realistic 3D models.
                 </p>
-            </div>
-            <div class="how-to" id="how-to">
-                <p>
-                    qwsdefgh
+                <p style="text-align:center">
+                    It can be used as a reference for artists, 
+                    fashion designers, illustrators, and anyone 
+                    else who needs a handy model at the click 
+                    of a button!
                 </p>
+                <p style="text-align:justify;padding-top:10px;text-indent:15px;">
+                    Sketch Sage is different from other modeling 
+                    software because it does more than just change model's poses. Not only can you play 
+                    with a model's reflectivity, gender, and skin tone, but adjustable lights also
+                    allow you to create ever more realistic scenes and references. 
+                </p>
+                <p style="text-align:justify;text-indent:15px;">
+                    As an artist and programmer, I tailored Sketch Sage
+                    to creator's specific needs to make it as versatile as possible. I hope 
+                    you enjoy using it as much as I do!
+                </p>
+                <h4 style="text-align:left;padding-top:20px;margin-bottom:10px">Connect with Me:</h4>
+                <div style="padding-bottom:5px;">
+                    <img src="styling/images/instagram.svg" height="13" width="13">
+                    <a href="https://www.instagram.com/orchidjuice/?igshid=148k9mz8tcku2" target="_blank" style="text-decoration:none">Instagram</a>
+                </div>
+                <div style="padding-bottom:15px;">
+                    <img src="styling/images/github-logo.svg" height="13" width="13">
+                    <a href="https://github.com/LeaBroudo" target="_blank" style="text-decoration:none">Github</a>
+                </div>
             </div>
             <div class="controls" id="controls">
                 <div style="padding-top:10px">
