--- a/sketchsage.html
+++ b/sketchsage.html
@@ -2,6 +2,15 @@
 <html>
 <head>
     <meta charset=utf-8>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142381248-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-142381248-1');
+    </script>
     <link rel="stylesheet" href="styling/styleFile.css">
     <link rel="icon" href="styling/images/favicon.ico">
     <title>Sketch Sage | Free Character Posing Studio</title>
